# yadb

./: .gitignore  .gitmodules
src/: .clang-format  .clang-tidy  CMakeLists.txt
src/base/: CMakeLists.txt
src/base/concepts/: callable.h
src/base/functional/: bind.h  callable_holder.h  callback.h  callback_forward.h  callback_traits.h  callback_unittest.cc  database.h  functor_holder.h  functor_traits.h
src/base/meta/: error_codes.h
src/query/syntax_parser/: syntax_parser.h
src/query/token/: token.cpp  token.h
src/scheduler/: thread_pool.cpp  thread_safe_queue.h
